@@ -108,8 +108,13 @@ repositories {
     url = "https://dvs1.progwml6.com/files/maven"
   }
   maven {
-    // location of a maven mirror for JEI files, as a fallback
     name = "ModMaven"
+    url = "https://modmaven.dev/"
+    // For Gradel 5.1 and above, just limit it to AE2
+  }
+  maven {
+    // location of a maven mirror for JEI files, as a fallback
+    name = "ModMaven2"
     url = "https://modmaven.k-4u.nl"
   }
 }
@@ -118,7 +123,7 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.15.2-31.2.0'
+    minecraft 'net.minecraftforge:forge:1.15.2-31.2.31'
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
@@ -144,7 +149,7 @@ dependencies {
     runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")
 
     compileOnly "moze_intel.projecte:projecte-${mc_version}:${projecte_version}:api"
-
+    compileOnly "appeng:appliedenergistics2:${applied_energistics_version}:api"
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
