@@ -6,3 +6,5 @@ org.gradle.daemon=false
 mc_version=1.15.2
 jei_version=6.0.2.16
 projecte_version=PE1.0.4
+# https://modmaven.dev/appeng/appliedenergistics2/
+applied_energistics_version=8.2.0
